--- a/fall-detector/src/main/AndroidManifest.xml
+++ b/fall-detector/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="altermarkive.guardian">
+    package="com.ethnicthv">
 
     <!-- Using network location provider -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -46,7 +46,7 @@
         android:supportsRtl="false"
         android:theme="@style/Theme.FallDetector">
         <activity
-            android:name="altermarkive.guardian.Main"
+            android:name="com.ethnicthv.Main"
             android:label="@string/app"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity">
@@ -56,7 +56,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="altermarkive.guardian.Contact"
+            android:name="com.ethnicthv.Contact"
             android:label="@string/contact"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity">
@@ -67,7 +67,7 @@
         </activity>
 
         <receiver
-            android:name="altermarkive.guardian.Boot"
+            android:name="com.ethnicthv.Boot"
             android:enabled="true"
             android:exported="true"
             android:label="Boot Receiver"
@@ -78,7 +78,7 @@
             </intent-filter>
         </receiver>
         <receiver
-            android:name="altermarkive.guardian.Messenger"
+            android:name="com.ethnicthv.Messenger"
             android:enabled="true"
             android:exported="true"
             android:label="SMS Responder"
@@ -88,7 +88,7 @@
             </intent-filter>
         </receiver>
         <receiver
-            android:name="altermarkive.guardian.Telephony"
+            android:name="com.ethnicthv.Telephony"
             android:enabled="true"
             android:exported="true"
             android:label="Call Responder"
@@ -98,7 +98,7 @@
             </intent-filter>
         </receiver>
         <receiver
-            android:name="altermarkive.guardian.Connectivity"
+            android:name="com.ethnicthv.Connectivity"
             android:enabled="true"
             android:exported="true"
             android:label="Connectivity Receiver"
@@ -109,7 +109,7 @@
         </receiver>
 
         <service
-            android:name="altermarkive.guardian.Guardian"
+            android:name="com.ethnicthv.Guardian"
             android:exported="false"
             android:label="Monitoring Service">
             <intent-filter>
